cc_binary(
  name = "desktop_version",

  srcs = [
				#"src/BinaryBlob.cpp",
				#"src/BinaryBlob.h",
				#"src/BlockV.cpp",
				#"src/BlockV.h",
				#"src/Constants.h",
				#"src/Credits.h",
				##"CustomLevels.cpp",
				#"src/CustomLevels.h",
				#"src/DeferCallbacks.c",
				#"src/DeferCallbacks.h",
				##"Editor.cpp",
				#"src/Editor.h",
				#"src/Ent.cpp",
				#"src/Ent.h",
				#"src/Entity.cpp",
				#"src/Entity.h",
				#"src/Enums.h",
				#"src/Exit.h",
				#"src/FileSystemUtils.cpp",
				#"src/FileSystemUtils.h",
				#"src/Finalclass.cpp",
				#"src/Finalclass.h",
				#"src/Game.cpp",
				#"src/Game.h",
				#"src/GlitchrunnerMode.c",
				#"src/GlitchrunnerMode.h",
				##"GOGNetwork.c",
				#"src/Graphics.cpp",
				#"src/Graphics.h",
				#"src/GraphicsResources.cpp",
				#"src/GraphicsResources.h",
				#"src/GraphicsUtil.cpp",
				#"src/GraphicsUtil.h",
				#"src/Input.cpp",
				#"src/Input.h",
				#"src/KeyPoll.cpp",
				#"src/KeyPoll.h",
				#"src/Labclass.cpp",
				#"src/Labclass.h",
				#"src/Logic.cpp",
				#"src/Logic.h",
				#"src/main.cpp",
				#"src/MakeAndPlay.h",
				#"src/Map.cpp",
				#"src/Map.h",
				#"src/Maths.h",
				#"src/Music.cpp",
				#"src/Music.h",
				#"src/Network.c",
				#"src/Network.h",
				#"src/Otherlevel.cpp",
				#"src/Otherlevel.h",
				#"src/preloader.cpp",
				#"src/preloader.h",
				#"src/Render.cpp",
				#"src/Render.h",
				#"src/RenderFixed.cpp",
				#"src/RenderFixed.h",
				#"src/Screen.cpp",
				#"src/Screen.h",
				#"src/ScreenSettings.h",
				#"src/Script.cpp",
				#"src/Script.h",
				#"src/Scripts.cpp",
				#"src/SoundSystem.cpp",
				#"src/SoundSystem.h",
				#"src/Spacestation2.cpp",
				#"src/Spacestation2.h",
				##"SteamNetwork.c",
				#"src/TerminalScripts.cpp",
				#"src/Textbox.cpp",
				#"src/Textbox.h",
				#"src/ThirdPartyDeps.c",
				#"src/Tower.cpp",
				#"src/Tower.h",
				#"src/TowerBG.h",
				#"src/Unused.h",
				#"src/UtilityClass.cpp",
				#"src/UtilityClass.h",
				#"src/Version.h",
				##"Version.h.in",
				#"src/Vlogging.c",
				#"src/Vlogging.h",
				#"src/WarpClass.cpp",
				#"src/WarpClass.h",
				#"src/XMLUtils.cpp",
				#"src/XMLUtils.h",
				#"src/Xoshiro.c",
				#"src/Xoshiro.h",

    "src/BinaryBlob.cpp",
    "src/BinaryBlob.h",
    "src/BlockV.cpp",
    "src/BlockV.h",
    "src/Constants.h",
    "src/Credits.h",
    "src/CustomLevels.cpp",
    "src/CustomLevels.h",
    "src/CWrappers.cpp",
    "src/CWrappers.h",
    "src/DeferCallbacks.c",
    "src/DeferCallbacks.h",
    "src/Editor.cpp",
    "src/Editor.h",
    "src/Ent.cpp",
    "src/Ent.h",
    "src/Entity.cpp",
    "src/Entity.h",
    "src/Enums.h",
    "src/Exit.h",
    "src/FileSystemUtils.cpp",
    "src/FileSystemUtils.h",
    "src/Finalclass.cpp",
    "src/Finalclass.h",
    "src/Game.cpp",
    "src/Game.h",
    "src/GlitchrunnerMode.c",
    "src/GlitchrunnerMode.h",
    # "src/GOGNetwork.c",
    "src/Graphics.cpp",
    "src/Graphics.h",
    "src/GraphicsResources.cpp",
    "src/GraphicsResources.h",
    "src/GraphicsUtil.cpp",
    "src/GraphicsUtil.h",
    "src/Input.cpp",
    "src/Input.h",
    "src/InterimVersion.h",
    "src/InterimVersion.in.c",
    "src/KeyPoll.cpp",
    "src/KeyPoll.h",
    "src/Labclass.cpp",
    "src/Labclass.h",
    # "src/lodepng_wrapper.c",
    "src/Logic.cpp",
    "src/Logic.h",
    "src/main.cpp",
    "src/MakeAndPlay.h",
    "src/Map.cpp",
    "src/Map.h",
    "src/Maths.h",
    "src/Music.cpp",
    "src/Music.h",
    "src/Network.c",
    "src/Network.h",
    "src/Otherlevel.cpp",
    "src/Otherlevel.h",
    "src/preloader.cpp",
    "src/preloader.h",
    "src/ReleaseVersion.h",
    "src/Render.cpp",
    "src/Render.h",
    "src/RenderFixed.cpp",
    "src/RenderFixed.h",
    "src/Screen.cpp",
    "src/Screen.h",
    "src/ScreenSettings.h",
    "src/Script.cpp",
    "src/Script.h",
    "src/Scripts.cpp",
    "src/Spacestation2.cpp",
    "src/Spacestation2.h",
    # "src/SteamNetwork.c",
    "src/TerminalScripts.cpp",
    "src/Textbox.cpp",
    "src/Textbox.h",
    "src/ThirdPartyDeps.c",
    "src/Tower.cpp",
    "src/Tower.h",
    "src/TowerBG.h",
    "src/Unused.h",
    "src/UtilityClass.cpp",
    "src/UtilityClass.h",
    "src/VFormat.c",
    "src/VFormat.h",
    "src/Vlogging.c",
    "src/Vlogging.h",
    "src/WarpClass.cpp",
    "src/WarpClass.h",
    "src/XMLUtils.cpp",
    "src/XMLUtils.h",
    "src/Xoshiro.c",
    "src/Xoshiro.h",
  ],

  copts = [
    "/EHsc",	  # No exceptions.
    "/GR-",		  # Disable RTTI.
    # "/MT",
    # "/Wall",    # All warnings.
    # "/WX",      # Warnings as errors.
    "/wd4244",  # Disable warnings about implicit conversions.
    "/wd4820",  # Disable warnings about default padding.
    "/wd4548",  # Expression with side-effect.
  ],

  local_defines = [
    "NO_EDITOR",
    "NO_CUSTOM_LEVELS",
    "SDL_MAIN_HANDLED",
  ],

  deps = [
    "//third_party:faudio",
    "//third_party:lodepng",
    "//third_party:physfs",
    "//third_party:tinyxml2",
    "//third_party:utfcpp",

    "//third_party:sdl2_lib",
    "//third_party:sdl2_main",
    "//third_party:sdl2_mixer",
  ],
)
